package getrank;

public interface Schütteln {

    public abstract void geschüttelt ();

}
