@startuml

title __GETRANK's Class Diagram__\n

  namespace getrank {
    class getrank.Apfelsaft {
        ~ klar : boolean
        ~ trüb : boolean
    }
  }
  

  namespace getrank {
    abstract class getrank.Getränk {
        ~ Volumen : double
    }
  }
  

  namespace getrank {
    class getrank.Kiwisaft {
    }
  }
  

  namespace getrank {
    abstract class getrank.Saft {
        ~ fruchtfleisch : boolean
    }
  }
  

  namespace getrank {
    interface getrank.Schütteln {
        {abstract} + geschüttelt()
    }
  }
  

  namespace getrank {
    abstract class getrank.Spirituose {
        ~ alkoholgehalt : int
    }
  }
  

  namespace getrank {
    class getrank.Tequilla {
        ~ goldenen : boolean
        ~ silbernen : boolean
    }
  }
  

  namespace getrank {
    class getrank.Wodka {
        ~ aromaName : String
    }
  }
  

  getrank.Apfelsaft -up-|> getrank.Saft
  getrank.Kiwisaft -up-|> getrank.Saft
  getrank.Saft -up-|> getrank.Getränk
  getrank.Spirituose -up-|> getrank.Getränk
  getrank.Tequilla -up-|> getrank.Spirituose
  getrank.Wodka -up-|> getrank.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
